<resources>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="search_menu_title">Search</string>
    <string name="callFailed_no_circuit_avail">No circuit availiable</string>
    <string name="callFailed_network_out_of_order">Network out of order</string>
    <string name="callFailed_no_route_to_destination">No route to destination</string>
    <string name="callFailed_channel_unacceptable">Channel unacceptable</string>
    <string name="callFailed_operator_determined_barring">Operator determined barring</string>
    <string name="callFailed_normal">Normall call clearing</string>
    <string name="callFailed_no_user_responding">No user responding</string>
    <string name="callFailed_no_answer_from_user">User alerting, no answer</string>
    <string name="callFailed_call_rejected">Call rejected</string>
    <string name="callFailed_number_changed">Number changed</string>
    <string name="callFailed_preemption">Pre-emption</string>
    <string name="callFailed_destination_out_of_order">Destination out of order</string>
    <string name="callFailed_invalid_number_format">Invalid number format (incomplete number)</string>
    <string name="callFailed_facility_rejected">Facility rejected</string>
    <string name="callFailed_resp_to_status_enquiry">Response to STATUS ENQUIRY</string>
    <string name="callFailed_normal_unspecified">Normal, unspecified</string>
    <string name="callFailed_tempopary_failure">Temporary failure</string>
    <string name="callFailed_switching_equipment_congestion">Switching equipment congestion</string>
    <string name="callFailed_access_information_discarded">Access information discarded</string>
    <string name="callFailed_requested_circuit_or_channel_not_available">requested circuit/channel not available</string>
    <string name="callFailed_resources_unavailable_or_unspecified">Resources unavailable, unspecified</string>
    <string name="callFailed_QOS_unavailable">Quality of service unavailable</string>
    <string name="callFailed_requested_facility_not_subscribed">Requested facility not subscribed</string>
    <string name="callFailed_incoming_calls_barred_within_CUG">Incoming calls barred within the CUG</string>
    <string name="callFailed_bearer_capability_not_authorized">Bearer capability not authorized</string>
    <string name="callFailed_bearer_capability_unavailable">Bearer capability not presently available</string>
    <string name="callFailed_service_option_not_available">Service or option not available, unspecified</string>
    <string name="callFailed_bearer_service_not_implemented">Bearer service not implemented</string>
    <string name="callFailed_requested_facility_not_implemented">Requested facility not implemented</string>
    <string name="callFailed_only_digital_information_bearer_available">Only restricted digital information bearer capability is available</string>
    <string name="callFailed_service_or_option_not_implemented">Service or option not implemented, unspecified</string>
    <string name="callFailed_invalid_transaction_identifier">Invalid transaction identifier value</string>
    <string name="callFailed_user_not_member_of_CUG">User not member of CUG</string>
    <string name="callFailed_incompatible_destination">Incompatible destination</string>
    <string name="callFailed_invalid_transit_NW_selection">Invalid transit network selection</string>
    <string name="callFailed_semantically_incorrect_message">Semantically incorrect message</string>
    <string name="callFailed_invalid_mandatory_information">Invalid mandatory information</string>
    <string name="callFailed_message_type_non_implemented">Message type non-existent or not implemented</string>
    <string name="callFailed_message_type_not_compatible_with_protocol_state">Message type not compatible with protocol state</string>
    <string name="callFailed_information_element_non_existent">Information element non,existent or not implemented</string>
    <string name="callFailed_conditional_IE_error">Conditional IE error</string>
    <string name="callFailed_message_not_compatible_with_protocol_state">Message not compatible with protocol state</string>
    <string name="callFailed_recovery_on_timer_expired">Recovery on timer expiry</string>
    <string name="callFailed_protocol_error_unspecified">Protocol error, unspecified</string>
    <string name="callFailed_interworking_unspecified">Interworking, unspecified</string>
    <string name="callFailed_non_selected_user_clearing">Non selected user clearing</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_back">Navigate back</string>
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_import_export">Import/export</string>
    <string name="call_with_a_note">Call with a note</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_block_number">Block number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="menu_4g_conference_call">4G conference call</string>
    <string name="dialer_settings_label">Settings</string>
    <string name="menu_newContact">New contact</string>
    <string name="voicemail_archive_activity_title">Voicemail Archive</string>
    <string name="search_shortcut_create_new_contact">Create new contact</string>
    <string name="search_shortcut_add_to_contact">Add to a contact</string>
    <string name="call_log_action_video_call">Video call</string>
    <string name="call_log_action_send_message">Send a message</string>
    <string name="call_log_action_details">Call details</string>
    <string name="description_call_log_call_action">Call</string>
    <string name="video_call_welcome_title"><b>Welcome to the new Video Calling Dialer</b></string>
    <string name="video_call_welcome_message">"We all love to hear that familiar voice at the end of the line, but talking face-to-face is so much better! Here's what you should know to get your real-time (or FaceTime?) connections going: You'll need to be on 4G LTE or a Wi-Fi connection The device you're calling must also be video calling compatible Video calls use your high speed data You can also upgrade a voice call to a video call Check out "<a>https://support.t-mobile.com/docs/DOC-23574</a> for more information.</string>
    <string name="video_call_welcome_message_repeat">Show this message every time</string>
    <string name="op_notice">Please be careful if sharing personal information</string>
    <string name="op_volte">HD</string>
    <string name="onscreenAddParticipant">Add Participant</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="onscreenHoldText_unselected">Hold Call</string>
    <string name="onscreenShowDialpadText_unselected">Show Dialpad</string>
    <string name="onscreenMuteText_unselected">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageConferenceText">Manage conference call</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenPauseVideoText">Pause video</string>
    <string name="onscreenOverflowText">More options</string>
    <string name="contactPhoto">contact photo</string>
</resources>