<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_4g_conference_call" android:title="@string/menu_4g_conference_call" />
    <item android:icon="@drawable/ic_menu_history_lt" android:id="@id/menu_history" android:title="@string/action_menu_call_history_description" />
    <item android:id="@id/menu_archive" android:visible="false" android:title="@string/voicemail_archive_activity_title" />
    <item android:id="@id/menu_import_export" android:title="@string/menu_import_export" />
    <item android:id="@id/menu_clear_frequents" android:title="@string/menu_clear_frequents" />
    <item android:id="@id/menu_add_contact" android:title="@string/menu_newContact" />
    <item android:id="@id/menu_call_settings" android:title="@string/dialer_settings_label" />
</menu>