<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_alignParentBottom="true" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <ToggleButton android:id="@id/audioButton" android:background="@drawable/op_btn_compound_audio_again" android:contentDescription="@string/audio_mode_speaker" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/muteButton" android:background="@drawable/op_btn_compound_mute_again" android:contentDescription="@string/onscreenMuteText_unselected" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/dialpadButton" android:background="@drawable/op_btn_compound_dialpad_again" android:contentDescription="@string/onscreenShowDialpadText_unselected" style="@style/InCallCompoundButton" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ToggleButton android:id="@id/recordingButton" android:background="@drawable/op_btn_compound_record_again" android:visibility="gone" style="@style/InCallCompoundButton" />
            <ProgressBar android:id="@id/record_waiting" android:background="?android:selectableItemBackground" android:padding="@dimen/op_call_button_record_padding" android:visibility="gone" android:layout_width="@dimen/op_in_call_button_dimension" android:layout_height="@dimen/op_in_call_button_dimension" android:layout_marginLeft="@dimen/op_call_button_margin_horizontal" android:layout_marginRight="@dimen/op_call_button_margin_horizontal" />
        </RelativeLayout>
        <ToggleButton android:id="@id/holdButton" android:background="@drawable/op_btn_compound_hold_again" android:visibility="gone" android:contentDescription="@string/onscreenHoldText_unselected" style="@style/InCallCompoundButton" />
        <ImageButton android:id="@id/swapButton" android:background="@drawable/op_btn_swap_again" android:visibility="gone" android:contentDescription="@string/onscreenSwapCallsText" style="@style/InCallButton" />
        <ImageButton android:id="@id/changeToVideoButton" android:background="@drawable/btn_change_to_video" android:visibility="gone" android:contentDescription="@string/onscreenVideoCallText" style="@style/InCallButton" />
        <ToggleButton android:id="@id/switchCameraButton" android:background="@drawable/btn_compound_video_switch" android:visibility="gone" android:contentDescription="@string/onscreenSwitchCameraText" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/pauseVideoButton" android:background="@drawable/btn_compound_video_off" android:visibility="gone" android:contentDescription="@string/onscreenPauseVideoText" style="@style/InCallCompoundButton" />
        <ImageButton android:id="@id/addButton" android:background="@drawable/op_btn_add_again" android:visibility="gone" android:contentDescription="@string/onscreenAddCallText" style="@style/InCallButton" />
        <ImageButton android:id="@id/mergeButton" android:background="@drawable/op_btn_merge_again" android:visibility="gone" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
        <ImageButton android:id="@id/addParticipant" android:background="@drawable/btn_addparticipant" android:visibility="gone" android:contentDescription="@string/onscreenAddParticipant" style="@style/InCallButton" />
        <ImageButton android:id="@id/overflowButton" android:background="@drawable/btn_overflow" android:visibility="gone" android:contentDescription="@string/onscreenOverflowText" style="@style/InCallButton" />
        <ImageButton android:id="@id/manageVideoCallConferenceButton" android:background="@drawable/ic_group_white_24dp" android:visibility="gone" android:contentDescription="@string/onscreenManageConferenceText" style="@style/InCallButton" />
    </LinearLayout>
</LinearLayout>