<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/call_log_action_container" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:importantForAccessibility="yes"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.dialer.voicemail.VoicemailPlaybackLayout android:id="@id/voicemail_playback_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <View android:background="@color/call_log_action_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:id="@id/call_action" android:paddingTop="@dimen/call_log_actions_top_padding" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_call_24dp" style="@style/CallLogActionIconStyle" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/call_action_text" android:text="@string/description_call_log_call_action" style="@style/CallLogActionTextStyle" />
            <TextView android:id="@id/call_type_or_location_text" style="@style/CallLogActionSupportTextStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/video_call_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_videocam_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/call_log_action_video_call" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
    <LinearLayout android:id="@id/create_new_contact_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_person_add_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/search_shortcut_create_new_contact" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
    <LinearLayout android:id="@id/add_to_existing_contact_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_person_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/search_shortcut_add_to_contact" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
    <LinearLayout android:id="@id/send_message_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_message_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/call_log_action_send_message" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
    <LinearLayout android:id="@id/call_with_note_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_call_note_white_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/call_with_a_note" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
    <ViewStub android:id="@id/extended_blocking_actions_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:id="@id/details_action" style="@style/CallLogActionStyle">
        <ImageView android:src="@drawable/ic_info_outline_24dp" style="@style/CallLogActionIconStyle" />
        <TextView android:text="@string/call_log_action_details" style="@style/CallLogActionTextStyle" />
    </LinearLayout>
</LinearLayout>