<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:keepScreenOn="true" android:paddingStart="16.0dip" android:paddingEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/video_call_welcome_title" style="?android:attr/textAppearanceMedium" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/video_call_welcome_message" style="?android:attr/textAppearanceSmall" />
    </ScrollView>
    <CheckBox android:id="@android:id/checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/video_call_welcome_message_repeat" />
</LinearLayout>